--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           >
             <img
               class="position-absolute w-100 h-100"
-              src="img/arayu5.jpeg"
+              src="img/bannerarayu.jpeg"
               style="object-fit: cover"
             />
             <div
@@ -102,7 +102,7 @@
                   Arnav & Ayushi
                 </h1>
                 <div
-                  class="d-inline-block border-top border-bottom border-light py-3 px-4"
+                  class="carausel-txt d-inline-block border-top border-bottom border-light py-3 px-4"
                 >
                   <h5
                     class="text-uppercase font-weight-normal text-white m-0"
@@ -125,7 +125,7 @@
           >
             <img
               class="position-absolute w-100 h-100"
-              src="img/arayu3.jpeg"
+              src="img/arayu8.jpg"
               style="object-fit: cover"
             />
             <div
@@ -138,7 +138,7 @@
                   Arnav & Ayushi
                 </h1>
                 <div
-                  class="d-inline-block border-top border-bottom border-light py-3 px-4"
+                  class=" carausel-txt d-inline-block border-top border-bottom border-light py-3 px-4"
                 >
                   <h5
                     class="text-uppercase font-weight-normal text-white m-0"
@@ -165,7 +165,7 @@
           href="#header-carousel"
           data-slide="prev"
         >
-          <div class="btn btn-primary px-0" style="width: 68px; height: 68px">
+          <div class="btn btn-primary carausel_btn px-0" style="width: 68px; height: 68px">
             <span class="carousel-control-prev-icon mt-3"></span>
           </div>
         </a>
@@ -174,7 +174,7 @@
           href="#header-carousel"
           data-slide="next"
         >
-          <div class="btn btn-primary px-0" style="width: 68px; height: 68px">
+          <div class="btn btn-primary carausel_btn px-0" style="width: 68px; height: 68px">
             <span class="carousel-control-next-icon mt-3"></span>
           </div>
         </a>
@@ -234,7 +234,7 @@
             <!-- <div class="row m-0"> -->
             <!-- <div class="col-md-6 p-0" style="min-height: 400px"> -->
             <div class="column">
-              <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center text-center">
                 <h1 class="font-secondary display-4">
                   Monday, 27th February, 2023
                 </h1>
@@ -535,48 +535,42 @@
         class="section-title position-relative text-center"
         style="margin-bottom: 120px"
       >
-        <h6
+        <!-- <h6
           class="text-uppercase text-primary mb-3"
           style="letter-spacing: 3px"
         >
           Gallery
-        </h6>
-        <h1 class="font-secondary display-4 text-white">Our Photo Gallery</h1>
+        </h6> -->
+        <h1 class="font-secondary display-4 text-white">Our Beautiful Moments</h1>
         <i class="far fa-heart text-white"></i>
       </div>
       <div class="owl-carousel gallery-carousel">
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="" />
+          <img class="img-fluid w-100" src="img/arayu2.jpg" alt="" />
           <a href="img/gallery-1.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="" />
-          <a href="img/gallery-2.jpg" data-lightbox="gallery">
-            <i class="fa fa-2x fa-plus text-white"></i>
-          </a>
-        </div>
-        <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="" />
+          <img class="img-fluid w-100" src="img/arayu6.jpg" alt="" />
           <a href="img/gallery-3.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="" />
+          <img class="img-fluid w-100" src="img/arayu1.jpg" alt="" />
           <a href="img/gallery-4.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="" />
+          <img class="img-fluid w-100" src="img/arayu4.jpg" alt="" />
           <a href="img/gallery-5.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="" />
+          <img class="img-fluid w-100" src="img/arayu5.jpeg" alt="" />
           <a href="img/gallery-6.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
@@ -857,9 +851,8 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid bg-dark text-white py-5"
+      class="container-fluid bg-dark text-white"
       id="contact"
-      style="margin-top: 90px"
     >
       <div class="container text-center py-5">
         <div class="section-title position-relative text-center">
