--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   Arnav & Ayushi
                 </h1>
                 <div
-                  class=" carausel-txt d-inline-block border-top border-bottom border-light py-3 px-4"
+                  class="carausel-txt d-inline-block border-top border-bottom border-light py-3 px-4"
                 >
                   <h5
                     class="text-uppercase font-weight-normal text-white m-0"
@@ -165,7 +165,10 @@
           href="#header-carousel"
           data-slide="prev"
         >
-          <div class="btn btn-primary carausel_btn px-0" style="width: 68px; height: 68px">
+          <div
+            class="btn btn-primary carausel_btn px-0"
+            style="width: 68px; height: 68px"
+          >
             <span class="carousel-control-prev-icon mt-3"></span>
           </div>
         </a>
@@ -174,7 +177,10 @@
           href="#header-carousel"
           data-slide="next"
         >
-          <div class="btn btn-primary carausel_btn px-0" style="width: 68px; height: 68px">
+          <div
+            class="btn btn-primary carausel_btn px-0"
+            style="width: 68px; height: 68px"
+          >
             <span class="carousel-control-next-icon mt-3"></span>
           </div>
         </a>
@@ -225,11 +231,12 @@
           <div class="container py-5">
             <div class="section-title position-relative text-center">
               <h1 class="font-secondary display-4">The Wedding Day</h1>
+              <img class="img-fluid p-2" src="img/border.svg" alt="border" />
               <h6 class="font-weight-normal m-0" style="letter-spacing: 2px">
                 The day when we will tie the knot and begin our new life as a
                 happy married couple
               </h6>
-              <i class="far fa-heart text-dark"></i>
+              <!-- <img class="img-fluid p-2" src="img/border.svg" alt="border" /> -->
             </div>
             <!-- <div class="row m-0"> -->
             <!-- <div class="col-md-6 p-0" style="min-height: 400px"> -->
@@ -307,25 +314,40 @@
                 About
               </h6> -->
               <h1 class="font-secondary display-4">Wedding Ceremony</h1>
-              <i class="far fa-heart text-dark"></i>
+              <img class="img-fluid p-2" src="img/border.svg" alt="border" />
             </div>
             <div class="row m-2 d-flex justify-content-center">
-              <h6 class="font-weight-normal m-1 text-center" style="letter-spacing: 2px">
+              <h6
+                class="font-weight-normal m-1 text-center"
+                style="letter-spacing: 2px"
+              >
                 Jain & Srivastava family
               </h6>
-              <h6 class="font-weight-normal mr-1 text-center" style="letter-spacing: 2px">
+              <h6
+                class="font-weight-normal mr-1 text-center"
+                style="letter-spacing: 2px"
+              >
                 Request the honour of your presence and blessing on the
                 auspacious occasion of the wedding ceremony of
               </h6>
               <h1 class="font-secondary display-4 my-3">Arnav & Ayushi</h1>
-              <h6 class="font-weight-normal m-1 text-center" style="letter-spacing: 2px">
+              <h6
+                class="font-weight-normal m-1 text-center"
+                style="letter-spacing: 2px"
+              >
                 The day when Arnav & Ayushi will tie the knot and begin their
                 new life as a happily married couple
               </h6>
-              <h6 class="font-weight-normal my-2 text-center" style="letter-spacing: 2px">
+              <h6
+                class="font-weight-normal my-2 text-center"
+                style="letter-spacing: 2px"
+              >
                 on Saturday, 27th February, 2023
               </h6>
-              <h6 class="font-weight-normal m-1 text-center" style="letter-spacing: 2px">
+              <h6
+                class="font-weight-normal m-1 text-center"
+                style="letter-spacing: 2px"
+              >
                 at JB Innovations, Lucknow
               </h6>
             </div>
@@ -347,7 +369,7 @@
               Story
             </h6> -->
             <h1 class="font-secondary display-4">Wedding Events</h1>
-            <i class="far fa-heart text-dark"></i>
+            <img class="img-fluid p-2" src="img/border.svg" alt="border" />
           </div>
           <div class="container timeline position-relative p-0">
             <div class="row">
@@ -361,9 +383,8 @@
                   <h1 class="font-secondary display-4">Haldi</h1>
                   <h1 class="font-secondary display-4">Ceremony</h1>
                   <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                  <p class="m-0">
-                    Sunday, February 26, 2023
-                  </p>
+                  <p class="m-0">Sunday, February 26, 2023</p>
+                  <p class="m-0">1:30 PM Onwards</p>
                 </div>
               </div>
             </div>
@@ -372,16 +393,19 @@
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary bg_custom p-4 mr-md-3"
                 >
-                <h1 class="font-secondary display-4">Ring Ceremony</h1>
-                <h1 class="font-secondary display-4">& Sangeet</h1>
-                <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                <p class="m-0">
-                  Sunday, February 26, 2023
-                </p>
+                  <h1 class="font-secondary display-4">Ring Ceremony</h1>
+                  <h1 class="font-secondary display-4">& Sangeet</h1>
+                  <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
+                  <p class="m-0">Sunday, February 26, 2023</p>
+                  <p class="m-0">7:30 PM Onwards</p>
                 </div>
               </div>
               <div class="col-md-6 text-center text-md-left">
-                <img class="img-fluid ml-md-3" src="img/engagement.jpg" alt="" />
+                <img
+                  class="img-fluid ml-md-3"
+                  src="img/engagement.jpg"
+                  alt=""
+                />
               </div>
             </div>
             <div class="row">
@@ -392,12 +416,11 @@
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary bg_custom p-4 ml-md-3"
                 >
-                <h1 class="font-secondary display-4">Mangal</h1>
-                <h1 class="font-secondary display-4">Phere</h1>
-                <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                <p class="m-0">
-                  Sunday, February 27, 2023
-                </p>
+                  <h1 class="font-secondary display-4">Mangal</h1>
+                  <h1 class="font-secondary display-4">Phere</h1>
+                  <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
+                  <p class="m-0">Sunday, February 27, 2023</p>
+                  <p class="m-0">2:30 PM Onwards</p>
                 </div>
               </div>
             </div>
@@ -406,16 +429,19 @@
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary bg_custom p-4 mr-md-3"
                 >
-                <h1 class="font-secondary display-4">Reception &</h1>
-                <h1 class="font-secondary display-4">Dinner</h1>
-                <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                <p class="m-0">
-                  Sunday, February 27, 2023
-                </p>
+                  <h1 class="font-secondary display-4">Reception &</h1>
+                  <h1 class="font-secondary display-4">Dinner</h1>
+                  <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
+                  <p class="m-0">Sunday, February 27, 2023</p>
+                  <p class="m-0">7:30 PM Onwards</p>
                 </div>
               </div>
               <div class="col-md-6 text-center text-md-left">
-                <img class="img-fluid ml-md-3" src="img/receptions.jpg" alt="" />
+                <img
+                  class="img-fluid ml-md-3"
+                  src="img/receptions.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -437,7 +463,7 @@
                 About
               </h6> -->
               <h1 class="font-secondary display-4">Know Us</h1>
-              <i class="far fa-heart text-dark"></i>
+              <img class="img-fluid p-2" src="img/border.svg" alt="border" />
             </div>
             <div class="row m-0">
               <div class="col-md-6 p-0" style="min-height: 400px">
@@ -447,76 +473,40 @@
                   style="object-fit: cover"
                 />
               </div>
-              <!-- <div class="col-md-6 p-0 text-center text-md-left">
+              <div class="col-md-6 p-0 text-center text-md-left">
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary p-5"
                 >
-                  <h3 class="mb-3">The Bride</h3>
-                  <h3 class="font-secondary font-weight-normal text-muted mb-3">
-                    <i class="fa fa-female text-primary pr-3"></i>
+                  <!-- <h3 class="mb-3">The Bride</h3> -->
+                  <h2 class="font-secondary mb-3">
+                    <!-- <i class="fa fa-female text-primary pr-3"></i> -->
                     Ayushi
-                  </h3>
-                  <p>
-                    Lorem elitr magna stet rebum dolores sed. Est stet labore
-                    est lorem lorem at amet sea, eos tempor rebum, labore amet
-                    ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd
-                    stet amet est dolor elitr.
-                  </p>
-                  <div class="position-relative">
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-instagram"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-facebook-f"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-linkedin-in"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square" href="#"
-                      ><i class="fab fa-instagram"></i
-                    ></a>
-                  </div>
+                  </h2>
+                  <p>D/O Chanchal and Naveen Jain</p>
+                  <p>Software Engineer</p>
                 </div>
-              </div> -->
+              </div>
             </div>
             <div class="row m-0 mb-4 mb-md-0 pb-2 pb-md-0">
-              <!-- <div class="col-md-6 p-0 text-center text-md-right">
-                <div
-                  class="h-100 d-flex flex-column justify-content-center bg-secondary p-5"
-                >
-                  <h3 class="mb-3">The Groom</h3>
-                  <h3 class="font-secondary font-weight-normal text-muted mb-3">
-                    <i class="fa fa-male text-primary pr-3"></i>
-                    Arnav
-                  </h3>
-                  <p>
-                    Lorem elitr magna stet rebum dolores sed. Est stet labore
-                    est lorem lorem at amet sea, eos tempor rebum, labore amet
-                    ipsum sea lorem, stet rebum eirmod amet. Kasd clita kasd
-                    stet amet est dolor elitr.
-                  </p>
-                  <div class="position-relative">
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-twitter"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-facebook-f"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square mr-1" href="#"
-                      ><i class="fab fa-linkedin-in"></i
-                    ></a>
-                    <a class="btn btn-outline-primary btn-square" href="#"
-                      ><i class="fab fa-instagram"></i
-                    ></a>
-                  </div>
-                </div>
-              </div> -->
               <div class="col-md-6 p-0" style="min-height: 400px">
                 <img
                   class="position-absolute w-100 h-100"
                   src="img/arnav.jpeg"
                   style="object-fit: cover"
                 />
+              </div>
+              <div class="col-md-6 p-0 text-center text-md-right">
+                <div
+                  class="h-100 d-flex flex-column justify-content-center bg-secondary p-5"
+                >
+                  <!-- <h3 class="mb-3">The Groom</h3> -->
+                  <h2 class="font-secondary mb-3">
+                    <!-- <i class="fa fa-male text-primary pr-3"></i> -->
+                    Arnav
+                  </h2>
+                  <p>S/O Dr. Varsha and Anoop Srivastava</p>
+                  <p>Software Engineer</p>
+                </div>
               </div>
             </div>
           </div>
@@ -541,8 +531,10 @@
         >
           Gallery
         </h6> -->
-        <h1 class="font-secondary display-4 text-white">Our Beautiful Moments</h1>
-        <i class="far fa-heart text-white"></i>
+        <h1 class="font-secondary display-4 text-white">
+          Our Beautiful Moments
+        </h1>
+        <img class="img-fluid p-2" src="img/border.svg" alt="border" />
       </div>
       <div class="owl-carousel gallery-carousel">
         <div class="gallery-item">
@@ -591,7 +583,7 @@
               Event
             </h6>
             <h1 class="font-secondary display-4">Our Wedding Event</h1>
-            <i class="far fa-heart text-dark"></i>
+            <img class="img-fluid p-2" src="img/border.svg" alt="border" />
           </div>
           <div class="row justify-content-center">
             <div class="col-md-6 text-center">
@@ -637,7 +629,7 @@
             Friends & Family
           </h6>
           <h1 class="font-secondary display-4">Groomsmen & Bridesmaid</h1>
-          <i class="far fa-heart text-dark"></i>
+          <img class="img-fluid p-2" src="img/border.svg" alt="border" />
         </div>
         <div class="row">
           <div class="col-12 text-center mb-2">
@@ -771,78 +763,41 @@
       <div class="element-bg">
         <div class="container py-5">
           <div class="section-title position-relative text-center">
-            <h6
+            <!-- <h6
               class="text-uppercase text-primary mb-3"
               style="letter-spacing: 3px"
             >
               RSVP
-            </h6>
-            <h1 class="font-secondary display-4">Join Our Party</h1>
-            <i class="far fa-heart text-dark"></i>
+            </h6> -->
+            <h1 class="font-secondary display-4">Our Wedding Venue</h1>
+            <img class="img-fluid p-2" src="img/border.svg" alt="border" />
           </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="text-center">
-                <form>
-                  <div class="form-row">
-                    <div class="form-group col-sm-6">
-                      <input
-                        type="text"
-                        class="form-control bg-secondary border-0 py-4 px-3"
-                        placeholder="Your Name"
-                      />
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <input
-                        type="email"
-                        class="form-control bg-secondary border-0 py-4 px-3"
-                        placeholder="Your Email"
-                      />
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="form-group col-sm-6">
-                      <select
-                        class="form-control bg-secondary border-0"
-                        style="height: 52px"
-                      >
-                        <option>Number of Guest</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <select
-                        class="form-control bg-secondary border-0"
-                        style="height: 52px"
-                      >
-                        <option>I'm Attending</option>
-                        <option>All Events</option>
-                        <option>Wedding Party</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <textarea
-                      class="form-control bg-secondary border-0 py-2 px-3"
-                      rows="5"
-                      placeholder="Message"
-                      required="required"
-                    ></textarea>
-                  </div>
-                  <div>
-                    <button
-                      class="btn btn-primary font-weight-bold py-3 px-5"
-                      type="submit"
-                    >
-                      Submit
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
+          <div class="row p-2 justify-content-center">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3562.387803058582!2d80.91637431450981!3d26.76390558319186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfbd4b76f75d5%3A0x915669d2b56de002!2sJB%20INNOVATIONS%20YASH%20LAWN%20AND%20BANQUETS!5e0!3m2!1sen!2sin!4v1674071863855!5m2!1sen!2sin"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+
+            <!-- <form sction="https://goo.gl/maps/kSUFk6tvQVhEqfXu6">
+              <button
+                class="btn btn-primary mt-3"
+                type="submit"
+                style="border-radius: 20px"
+              >
+                Get Directions
+              </button>
+            </form> -->
+            <a
+              href="https://goo.gl/maps/kSUFk6tvQVhEqfXu6"
+              class="btn btn-primary mt-3"
+              style="border-radius: 20px"
+              >Get Directions</a
+            >
           </div>
         </div>
       </div>
@@ -850,14 +805,11 @@
     <!-- RSVP End -->
 
     <!-- Footer Start -->
-    <div
-      class="container-fluid bg-dark text-white"
-      id="contact"
-    >
+    <div class="container-fluid bg-dark text-white" id="contact">
       <div class="container text-center py-5">
         <div class="section-title position-relative text-center">
           <h1 class="font-secondary display-3 text-white">Thank You</h1>
-          <i class="far fa-heart text-white"></i>
+          <img class="img-fluid p-2" src="img/border.svg" alt="border" />
         </div>
         <!-- <div class="d-flex justify-content-center mb-4">
           <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"
