--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
     <div class="element-bg"></div>
     <!-- Navbar Start -->
     <nav
-      class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-lg-5"
+      class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark justify-content-center py-3 py-lg-0 px-lg-5"
     >
       <a href="index.html" class="navbar-brand d-block d-lg-none">
         <h1 class="font-secondary text-white mb-n2">
           Arnav <span class="text-primary"> &</span> Ayushi
         </h1>
       </a>
-      <button
+      <!-- <button
         type="button"
         class="navbar-toggler"
         data-toggle="collapse"
         data-target="#navbarCollapse"
       >
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div
         class="collapse navbar-collapse justify-content-between"
         id="navbarCollapse"
@@ -771,6 +771,8 @@
             </h6> -->
             <h1 class="font-secondary display-4">Our Wedding Venue</h1>
             <img class="img-fluid p-2" src="img/border.svg" alt="border" />
+            <p>JB INNOVATIONS YASH LAWN AND BANQUETS</p>
+            <p></p>
           </div>
           <div class="row p-2 justify-content-center">
             <iframe
@@ -808,7 +810,9 @@
     <div class="container-fluid bg-dark text-white" id="contact">
       <div class="container text-center py-5">
         <div class="section-title position-relative text-center">
-          <h1 class="font-secondary display-3 text-white">Thank You</h1>
+          <h3 class="text-white">
+            WE LOOK FORWARD TO CELEBRATE WITH YOU ON OUR BIG DAY!
+          </h3>
           <img class="img-fluid p-2" src="img/border.svg" alt="border" />
         </div>
         <!-- <div class="d-flex justify-content-center mb-4">
